--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "sprint-1-landing-page",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build-css": "sass styles/main.scss styles/main.css --no-source-map",
+    "watch-css": "sass --watch styles/main.scss styles/main.css --no-source-map",
+    "start": "live-server --entry-file=main.html"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3"
-  }
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2"
+  },
+  "keywords": []
 }
