--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^5.3.3"
   },
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "live-server": "^1.2.2",
+    "sass": "^1.81.0"
   },
   "keywords": []
 }
