--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "sass styles/main.scss styles/main.css --no-source-map",
+    "build-css": "npx sass styles/main.scss styles/main.css --no-source-map",
     "watch-css": "sass --watch styles/main.scss styles/main.css --no-source-map",
-    "start": "live-server --entry-file=main.html"
+    "start": "http-server ."
   },
   "author": "",
   "license": "ISC",
